data/repos_history/sbfaulkner/k8s-playground/2022-06-10T02:50:41Z/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      hostPID: true
      containers:
      - image: localhost:5001/hello:latest
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
          protocol: TCP
          name: echoserver
        resources:
          limits:
            cpu: 500m
            memory: 32Mi
          requests:
            cpu: 200m
            memory: 16Mi
        volumeMounts:
        - name: dsdsocket
          mountPath: /var/run/datadog
      volumes:
      - hostPath:
          path: /var/run/datadog/
        name: dsdsocket
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
  labels:
    app: hello
spec:
  ports:
  - port: 8080
    targetPort: echoserver
  selector:
    app: hello
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  namespace: hello
spec:
  tls:
  - hosts:
    - hello.k8s-playground.dev
    secretName: hello-tls
  rules:
  - host: hello.k8s-playground.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello
            port:
              number: 8080
